# AuthDependLib

./: README.md  pyproject.toml
auth_dep_lib/depends/: auth.py
tests/: test_auth_privilege_dep.py
